# yaguar-back

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_inventory_movements_notes.py  0003_multi_tenant.py  0004_product_bundles.py  0005_ai_agents.py  0006_sale_discount_tax.py  0007_user_modules.py  0008_split_payments.py  0009_must_change_password.py  0010_ai_usage_events.py  0011_cartera.py  0012_margin_basis.py  0013_expense_accounts.py
bruno/: bruno.json
bruno/auth/: Login.bru
bruno/customers/: Create Customer.bru  Delete Customer.bru  Get Customer.bru  List Customers.bru  Update Customer.bru
bruno/dashboard/: KPIs.bru
bruno/environments/: Local.bru  Produccion.bru
bruno/inventory/: Adjust Inventory.bru  Get Inventory Level.bru  List Inventory.bru  List Movements.bru
bruno/ledger/: Create Entry.bru  List Ledger.bru
bruno/pos/: Checkout.bru
bruno/products/: Create Category.bru  Create Product.bru  Delete Product.bru  Get Product.bru  List Categories.bru  List Products.bru  Update Product.bru
bruno/purchases/: Create Purchase.bru  Get Purchase Lines.bru  Get Purchase.bru  List Purchases.bru  Receive Purchase.bru  Update Purchase Status.bru
bruno/sales/: Create Sale.bru  Get Sale Lines.bru  Get Sale.bru  List Sales.bru  Update Sale Status.bru
bruno/suppliers/: Create Supplier.bru  Delete Supplier.bru  Get Supplier.bru  List Suppliers.bru  Update Supplier.bru
queries/: ai_usage_cost.sql
src/: app.py  seed.py
src/domains/accounts/: models.py  repository.py  router.py  schemas.py  service.py
src/domains/agents/: actions.py  detectors.py  graph.py  llm.py  models.py  prompts.py  repository.py  router.py  schemas.py  service.py
src/domains/ai_usage/: models.py  repository.py  router.py  schemas.py  service.py
src/domains/auth/: router.py
src/domains/chat/: models.py  repository.py  router.py  schemas.py  service.py
src/domains/customers/: models.py  repository.py  router.py  schemas.py  service.py
src/domains/dashboard/: router.py  schemas.py
src/shared/: database.py  margin.py  settings.py  types.py
(+39 files in other folders)
