[project]
name = "yaguar-back"
version = "0.1.0"
description = "Yaguar ERP Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "bcrypt>=4.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "greenlet>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
